ui, tower upgrade, money

--- a/src/main/resources/global.yml
+++ b/src/main/resources/global.yml
@@ -1,2 +1,3 @@
 #value displayed on entity name tags, colors prefices with "§", valid variables are {mobName}, {health} and {maxHealth}
 waveEntityNamePattern: "{mobName} §r§8[§3{health}§f/§3{maxHealth}§8]"
+towerLevelDisplayItems: [COBBLESTONE, STONE, COAL_BLOCK, IRON_BLOCK, GOLD_BLOCK, DIAMOND_BLOCK, EMERALD_BLOCK]
